# FoodMate

./: Filtering.py  Guess.cpp  Guess.h  LICENSE  Makefile  README.md  SUMMARY.md  SocketClient.cpp  SocketClient.h  board.py  client_main.cpp  guess.py  main.cpp  main.py  producer_consumer.cpp  producer_consumer_semaphore.cpp  python_GPIO_without_bouncing.py  test_server.py  track_blue.py  track_chopstick.cpp  track_chopstick.py  tracking-1.cpp  tracking_last.py
CONVER~1/: Untitled.ipynb  Untitled1.ipynb  keras_model.h5  labels.txt  영상처리로 얻은 사진들 학습.ipynb
Oss-KOBOT/code/: board.py  guess.py  main.py  track_blue.py
Tracking_with_Thread_GPIO/: CMakeLists.txt  Tracker.cpp  Tracker.h
_deprecated/: board.py  guess.py  main.py  sound.py
how-to-build/: undefined.md
how-to-build-1/: hw.md  sw.md
how-to-use/: food-mate.md
model_package/: case_bottom.stl  case_top.stl
src/: board.py  guess.py  main.py  sound.py  test.py  tracker.py
src/Board/: board.py
src/Tracker/: Tracker.py
src/image_Mgr/: Board.cpp  Board.h  CMakeLists.txt  Filter.cpp  Filter.h  Matching.cpp  Matching.h  empty.cpp  img_crop.cpp  img_crop.h  target_crop.cpp
src/main/Tracking_food/: .Makefile.swn  .Makefile.swo  .Makefile.swp  Board.cpp  Board.h  CMakeLIsts.txt  CMakeLists.txt  Consumer1.cpp  Consumer1.h  Consumer2.cpp  Consumer2.h  Makefile  Matcher.cpp  Matcher.h  Matching.cpp  Matching.h  ResultFile  SocketClient.cpp  SocketClient.h  Sound.cpp  Sound.h  ThDetectRecognizer.cpp  ThDetectRecognizer.h  ThTracker.cpp  ThTracker.h  ThTracker2.cpp  Tracker.cpp  Tracking.cpp  Tracking.h  guess.py  main.cpp  main_tmp.cpp  producer_consumer_semaphore.cpp  server_main.py  sound.py
temp_Thread/: Guess.cpp  Guess.h  guess.py  main.cpp
untitled-1/: README.md  undefined-1.md
untitled-2/: README.md  undefined-2.md
(+22 files in other folders)
